correct footer alignment for desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,12 +303,12 @@ input[type=text], select, textarea{
 footer {
     background-color: #207182;
     color: #f5f5f5;
-    position: relative;
+    height: 150px;
+    width: 100%;
     padding-top: 1rem;
-    padding-bottom: 0px;
+    /*padding-bottom: 0px;*/
 }
 
-.footer,
 .push {
   height: 150px;
 }
@@ -390,6 +390,12 @@ footer {
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
+
+    #menu {
+        float: 0 auto;
+        padding: 0;
+    }
+
     .col-25 {
         width: 100%;
         margin-top: 0;
